plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}
ext {
	hibernateVersion = "6.6.11.Final"
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	// PostgreSQL driver
	runtimeOnly 'org.postgresql:postgresql'
	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.1.1'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	implementation "net.logstash.logback:logstash-logback-encoder:7.4"



	// Apache Commons Lang
	implementation 'org.apache.commons:commons-lang3:3.14.0'
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	// Jakarta Persistence (for runtime, not just annotation processor)
	implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'

	// Keycloak
	implementation 'org.keycloak:keycloak-admin-client:25.0.0'
	implementation 'jakarta.ws.rs:jakarta.ws.rs-api:3.1.0'

	// Hibernate (explicit)
	implementation "org.hibernate.orm:hibernate-core:${hibernateVersion}"
	implementation "org.hibernate.orm:hibernate-envers:${hibernateVersion}"

	// Dev tools
	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	//validation
	implementation 'javax.validation:validation-api:2.0.1.Final'

	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.1.1'

	implementation project(':common-security')


	// Testing
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation 'junit:junit:4.13.2'
}

tasks.named('test') {
	useJUnitPlatform()
}